# free_cash_flow_prediction

./: .gitignore  DATA_VALIDATION_AND_PAPER_REVIEW_GUIDE.md  Operatingcashflow_p.ipynb  README.md  SVR_Valuation_Pipeline.ipynb  SVR_Valuation_Pipeline.py  apply_plot_styles.py  compute_target_mae.py  extract_paper.py  extracted_paper.txt  fix_syntax.py  fix_syntax_2.py  get_inputs.py  plots_refactor.py  pyproject.toml  research_objective.md  upgrade_aesthetics.py  user_inputs.txt  vibrant_plots.py
.ipynb_checkpoints/: SVR_Valuation_Pipeline-checkpoint.ipynb  generate_features-checkpoint.py
data/: master_ml_dataset.csv
machine_learning/: ML_COAUTHOR_GUIDE.md  dcf.py  ml.py
papers_manuscript/: fix_bibliography.py  fix_feedback.py  fix_feedback_2.py  fix_formats.py  fix_limitations.py  fix_report.py  paper.aux  paper.docx  paper.md  paper.out  paper.tex  replace_refs.py
progress_track/: feature_definitions_and_contributions.md  interpreatibility.md  literature_review.md  model_training.md  refrences.md
scripts/: add_valuation_metrics.py  merge_master_dataset.py
