[project]
name = "apex-journal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cloudscraper>=1.2.71",
    "langdetect>=1.0.9",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.10",
    "playwright>=1.60.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "shap>=0.52.0",
    "statsmodels>=0.14.6",
    "tabulate>=0.10.0",
    "xgboost>=3.3.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.6.1",
]
